Bug 1154136 - Update Bluetooth connection state when BT stack updates device properties. r=shuang, a=bajaj

--HG--
extra : rebase_source : 46ce039256cf08366b3e54467b280a0ab1b50e7c